--- a/Student Information.html
+++ b/Student Information.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<style>
 
+  form{
+   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSAhjVhEYAGxjnKG32TZxvkWQzessQR_-TUg&s");
+   
+    text-align: center;
+    color:white;
+    margin:100px auto;
+     padding: 20px;
+      border-radius: 10px;
+      width: 400px;
+  }
+  button{
+   background-color:green;
+  }
+</style>
+</head>
+<body>
+<form>
 <h1>cyber security Department</h1>
 <h2>Student Information Form</h2>
 
@@ -30,7 +48,7 @@
   
   
   
-  <input type="submit" value="submit"
+  <button>submit</button>
   
 
 </form> 
@@ -39,5 +57,3 @@
 
 </body>
 </html>
-
-
